# AI-Spec-Driven-Development-Book

./: .gitignore  PROJECT_SUMMARY.md  README.md  RUNNING_THE_PROJECT.md  docusaurus.config.js  package-lock.json  package.json  run_project.bat  run_project.sh  sidebars.js
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
docs/: conclusion.md  intro.md  quickstart.md
docs/capstone/: implementation.md  index.md
docs/module1/: implementation.md  index.md
docs/module2/: implementation.md  index.md
docs/module3/: implementation.md  index.md
history/prompts/1-physical-ai-robotics/: 001-create-physical-ai-robotics-spec.spec.prompt.md
history/prompts/constitution/: 1-update-constitution.constitution.prompt.md
history/prompts/physical-ai-robotics/: 1-generate-tasks-for-humanoid-robotics.tasks.prompt.md
ros_ws/src/cv_detection/: package.xml  setup.py
ros_ws/src/cv_detection/launch/: cv_detection.launch.py
ros_ws/src/cv_detection/src/: object_detector.py
ros_ws/src/humanoid_control/: CMakeLists.txt  package.xml
ros_ws/src/humanoid_control/scripts/: agent.py
ros_ws/src/humanoid_control/src/: control_service.py  joint_publisher.py  sensor_subscriber.py
ros_ws/src/humanoid_control/test/: test_control_pipeline.py  test_sensor_simulation.py
ros_ws/src/humanoid_description/: package.xml
ros_ws/src/humanoid_description/launch/: gazebo.launch.py  robot.launch.py
ros_ws/src/humanoid_description/rviz/: robot.rviz
ros_ws/src/humanoid_description/urdf/: humanoid.urdf.xacro
ros_ws/src/humanoid_description/urdf/sensors/: camera.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro
ros_ws/src/humanoid_description/worlds/: humanoid_world.world
ros_ws/src/humanoid_vla/: package.xml  setup.py
ros_ws/src/humanoid_vla/launch/: vla_integration.launch.py
ros_ws/src/llm_planner/: package.xml  setup.py
ros_ws/src/llm_planner/launch/: llm_planner.launch.py
ros_ws/src/llm_planner/src/: planner.py
ros_ws/src/manipulation/: package.xml  setup.py
ros_ws/src/manipulation/launch/: manipulation.launch.py
ros_ws/src/manipulation/src/: grasp_planner.py
ros_ws/src/nav2_config/: package.xml  setup.py
ros_ws/src/nav2_config/launch/: nav2.launch.py
ros_ws/src/nav2_config/params/: nav2_params.yaml
ros_ws/src/voice_interface/: package.xml  setup.py
ros_ws/src/voice_interface/launch/: voice_interface.launch.py
ros_ws/src/voice_interface/src/: whisper_node.py
ros_ws/src/vslam_pipeline/: package.xml  setup.py  test_vslam.py
ros_ws/src/vslam_pipeline/launch/: vslam_pipeline.launch.py
ros_ws/src/vslam_pipeline/vslam_pipeline/: vslam_node.py
specs/1-physical-ai-robotics/: plan.md  spec.md  tasks.md
specs/1-physical-ai-robotics/checklists/: requirements.md
src/pages/: index.js
tests/: integration_test.py
