<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_vla</name>
  <version>0.0.1</version>
  <description>Vision-Language-Action integration for humanoid robot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <depend>voice_interface</depend>
  <depend>llm_planner</depend>
  <depend>cv_detection</depend>
  <depend>manipulation</depend>
  <depend>nav2_config</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>