<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_config</name>
  <version>0.0.1</version>
  <description>Nav2 configuration package for humanoid robot bipedal locomotion</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>