<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_interface</name>
  <version>0.0.1</version>
  <description>Voice interface for humanoid robot using OpenAI Whisper</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>audio_common_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>